[package]
name = "ccp_bbr"
version = "0.2.0"
authors = ["Akshay Narayan <akshayn@mit.edu>", "Deepti Raghavan <deeptir@mit.edu>", "Frank Cangialosi <frankc@csail.mit.edu>"]

[dependencies]
clap="2.29"
portus = { git = "https://github.com/ccp-project/portus" }
slog = "2"
slog-async = "2"
slog-term = "2"
time="0.1"
