[package]
name = "ccp_bbr"
version = "0.2.1"
authors = ["Akshay Narayan <akshayn@mit.edu>"]

[dependencies]
clap = "2.29"
portus = { git = "https://github.com/ccp-project/portus", branch = "many_to_one" }
portus_export = { git = "https://github.com/ccp-project/portus", branch = "many_to_one" }
slog = "2.3"
time = "0.1"

[dependencies.nom]
version = "4"
features = ["verbose-errors"]
